--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
+    "babel-plugin-inline-react-svg": "^2.0.2",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1"
   }
