--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
+    "react-intersection-observer": "^9.4.3",
+    "react-scroll": "^1.8.9",
     "react-simple-typewriter": "^4.0.5",
-    "react-social-icons": "^5.15.0",
     "typescript": "4.8.4"
   },
   "devDependencies": {
+    "@types/react-scroll": "^1.8.6",
     "autoprefixer": "^10.4.13",
     "babel-plugin-inline-react-svg": "^2.0.2",
     "postcss": "^8.4.18",
