--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^7.6.4",
     "next": "13.0.2",
     "react": "18.2.0",
+    "react-countup": "^6.4.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-intersection-observer": "^9.4.3",
