--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
+    "daisyui": "^2.51.3",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.2",
     "framer-motion": "^7.6.4",
@@ -23,10 +24,12 @@
     "react-intersection-observer": "^9.4.3",
     "react-scroll": "^1.8.9",
     "react-simple-typewriter": "^4.0.5",
+    "react-vertical-timeline-component": "^3.6.0",
     "typescript": "4.8.4"
   },
   "devDependencies": {
     "@types/react-scroll": "^1.8.6",
+    "@types/react-vertical-timeline-component": "^3.3.3",
     "autoprefixer": "^10.4.13",
     "babel-plugin-inline-react-svg": "^2.0.2",
     "postcss": "^8.4.18",
